test/1.2/errors/T_EPTYPE.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
method m(bool b) -> (int i) {
}

method init {
    local int i;
    local bool b;
    /// ERROR EPTYPE
    call $m(i) -> (i);
}
